fix alignment issue

--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -553,6 +553,9 @@ span.dir {
 #species_id {
     width: 315px;
 }
+#add_species_peptidome {
+    width: 119px;
+}
 #pancore_graph div.tip {
     .translate3d(0, 0, 0);
 }
@@ -565,7 +568,7 @@ span.dir {
     float: left;
 }
 .treeView.pancore {
-    width: 440px;
+    width: 438px;
     min-height: 10px;
 }
 .treeView ul {
